# Chess-in-c-

./: CMakeLists.txt  Chessboard.cpp  README.md  main.cpp
headers/: Chessboard.h
